# University

./: .gitignore  README.md
Semestr1/WdI/: lista5.py  lista8.py
Semestr1/WdI/lista1/: KMP  zad1.txt  zad10.txt  zad2.txt  zad5.txt  zad6.txt  zad8.txt  zad9.txt
Semestr1/Wstęp do programowania Python/lista10/: 1.py  2.py  4.py  5.py  6.py  imiona.txt
Semestr1/Wstęp do programowania Python/lista11/: 1.py  1_save.py  2.py  3.py  4.py  wprawka.py  wyniki.txt
Semestr1/Wstęp do programowania Python/lista12/: 1.py  3.py  7 i 8.py
Semestr1/Wstęp do programowania Python/lista13/: 10 oddane.py  12.py  4.py  5.py  wprawka.py
Semestr1/Wstęp do programowania Python/lista7/: 1.py  2.py  3.py  wprawka.py
Semestr1/Wstęp do programowania Python/lista8/: 1.py  2.py  3.py  4.py  popularne_slowa.txt  wprawka.py
Semestr1/WstępDoInformatyki/: a.out  lista4.py  lista6.py  lista7.py  lista9.py  pseudokod.txt  wyklad0.txt
Semestr1/WstępDoInformatyki/lista1/: zad3.txt  (+2 more)
Semestr3/ANL/: dane.txt  konkurs1.py
Semestr3/Inzynieria oprogramowania/: IO grudzień.txt  IO styczen.docx  IO2.pptx  Koncepcja wykonania systemu.docx  Specyfikacja wymagań.docx
Semestr3/Zaawansowany_C++/lista10/: CMakeLists.txt  a.out  input.txt  output_iso88592.txt  output_utf32.txt  tempCodeRunnerFile.cpp  zad1  zad1.cpp  zad2  zad2.cpp  zad3  zad3.cpp  zad4  zad4.cpp
Semestr4/RachunekPrawdopodobienstwaIStatystyka/: lista10.csv  lista10.ipynb  szablon.tex
Semestr5/KursProjektowaniaAplikacjiZBazamiDanych/: dockerInfo.txt  lista3.sql  setupInstruction.txt
Semestr5/ProgramowanieWspolbiezne/: lista1.md
(+5871 files in other folders)
